<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mediumPurple"
        tools:ignore="MissingConstraints"/>

    <LinearLayout
        android:id="@+id/linearLayoutInputTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarMain"
        app:layout_constraintVertical_bias="0.1">

        <EditText
            android:id="@+id/firstTimeET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_first_time"
            android:textSize="20sp"
            android:padding="16dp"
            android:textColor="@color/black"
            android:background="@drawable/edit_text_background"
            android:inputType="text"
            />
        <TextView
            android:id="@+id/operatorTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operator_calculate"
            android:textSize="24dp"
            android:textStyle="bold"
            android:textColor="@color/primary_color"
            android:layout_marginHorizontal="16dp"
            />
        <EditText
            android:id="@+id/secondTimeET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_second_time"
            android:textSize="20sp"
            android:padding="16dp"
            android:textColor="@color/black"
            android:background="@drawable/edit_text_background"
            android:inputType="text"
            />
    </LinearLayout>

    <!--Кнопки операций-->
    <LinearLayout
        android:id="@+id/linearLayoutChoiceOperator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutInputTime"
        app:layout_constraintVertical_bias="0.15">

        <Button
            android:id="@+id/addOperationBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:text="@string/add_button"
            android:textSize="18sp"
            android:padding="16dp"
            android:backgroundTint="@color/add_button_color"
            android:textColor="@color/white"
            />
        <Button
            android:id="@+id/subtrackOperationBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:text="@string/subtrack_button"
            android:textSize="18sp"
            android:padding="16dp"
            android:backgroundTint="@color/subtract_button_color"
            android:textColor="@color/white"
            />
    </LinearLayout>

    <!--Результат-->

    <TextView
        android:id="@+id/textResultTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/secondary_color"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutChoiceOperator"
        app:layout_constraintVertical_bias="0.15"/>

    <TextView
        android:id="@+id/resultTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_result"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/primary_color"
        android:layout_marginBottom="40dp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textResultTV"
        app:layout_constraintVertical_bias="0.15"
        />
    <!--Примеры форматов ввода-->

    <TextView
        android:id="@+id/examplesFormatedTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/example_format_input"
        android:textColor="@color/secondary_text_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultTV"
        app:layout_constraintVertical_bias="0.15"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/card_background"
        android:padding="16dp"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/examplesFormatedTV"
       app:layout_constraintHorizontal_bias="0.15">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_second"
            android:textSize="16sp"
            android:textColor="@color/regular_text_color"
            android:layout_marginBottom="4dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_minute_second"
            android:textSize="16sp"
            android:textColor="@color/regular_text_color"
            android:layout_marginBottom="4dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_hour_minute"
            android:textSize="16sp"
            android:textColor="@color/regular_text_color"
            android:layout_marginBottom="4dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_hour_minute_second"
            android:textSize="16sp"
            android:textColor="@color/regular_text_color"
            android:layout_marginBottom="4dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_hour"
            android:textSize="16sp"
            android:textColor="@color/regular_text_color"
            android:layout_marginBottom="4dp"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>